# midiator

./: .buildinfo  LICENSE  README.rst  demos-atmospheric_1-Cm-60.mid  demos-atmospheric_2-C-65.mid  demos-composition_1-Cm-100.mid  demos-jazz_1-F-130.mid  index.html  objects.inv  pyproject.toml  searchindex.js
.clerk/: harmonic-resonance-midiator_docs.md  harmonic-resonance-midiator_src.md  harmonic-resonance-midiator_tree.txt
.github/workflows/: action.yml
_modules/: index.html
_sources/: intro.rst.txt
_sources/modules/: harmonic_resonance.midiator.instruments.rst.txt  harmonic_resonance.midiator.notes.rst.txt  harmonic_resonance.midiator.percussions.rst.txt  index.rst.txt
demos/: _template.py  atmospheric_1.py  atmospheric_2.py  composition_1.py  demos-atmospheric_2-C-120.mid  demos-atmospheric_2-C-65.mid  demos-template-D-120.mid  demos-template-D-180.mid  demos-template-D-240.mid  demos-template-D-60.mid  demos-template-E-180.mid  house.py  index.html  jazz_composition_1.py  latin.py  mandala-unfold from the center-E-50.mid  mandala-unfold from the center-E-52.mid  mandala-unfold from the center-E-53.mid  mandala-unfold from the center-E-90.mid  mandala.py  outpost.py  pi-plus-phi-intro4-E-180.mid  primes.py  test_patterns-conga-D-180.mid  test_patterns.py  thelio.py  voices.ipynb  workshop.py
docsrc/: conf.py  index.rst
genindex/: index.html
intro/: index.html
log/: atom.xml  index.html
mission/: index.html
modules/: index.html
py-modindex/: index.html
refs/: index.html
search/: index.html
todos/: index.html
usage/: index.html
(+41 files in other folders)
