[project]
name = "harmonic-resonance-midiator"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mido",
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
midiator = "harmonic_resonance.midiator.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["harmonic_resonance"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "harmonic_resonance.midiator.__version__"}

[project.urls]
"Website" = "https://harmonic-resonance.github.io/midiator"
"Repository" = "https://github.com/harmonic-resonance/midiator"
"Issues" = "https://github.com/harmonic-resonance/midiator/issues"
